--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -27,6 +27,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.5",
     "react-toastify": "^11.0.3",
+    "use-debounce": "^10.0.4",
     "webpack": "^5.97.1",
     "webpack-cli": "^6.0.1"
   },
