--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,13 @@
 asgiref==3.8.1
+bcrypt==4.3.0
 Django==5.2.1
 django-cors-headers==4.7.0
+django-filter==25.1
+django-viewflow==2.2.12
 djangorestframework==3.16.0
+Faker==37.5.3
+Jinja2==3.1.6
+MarkupSafe==3.0.2
+pdfkit==1.0.0
 sqlparse==0.5.3
+tzdata==2025.2
