--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -46,6 +46,7 @@
     "@babel/preset-react": "^7.26.3",
     "@svgr/webpack": "^8.1.0",
     "css-loader": "^7.1.2",
+    "dotenv-webpack": "^8.1.1",
     "html-webpack-plugin": "^5.6.3",
     "mini-css-extract-plugin": "^2.9.2",
     "style-loader": "^4.0.0",
