--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,30 @@
+amqp==5.3.1
 asgiref==3.8.1
+async-timeout==5.0.1
 bcrypt==4.3.0
+billiard==4.2.2
+celery==5.5.3
+click==8.3.0
+click-didyoumean==0.3.1
+click-plugins==1.1.1.2
+click-repl==0.3.0
 Django==5.2.1
 django-cors-headers==4.7.0
 django-filter==25.1
 django-viewflow==2.2.12
+django_celery_results==2.6.0
 djangorestframework==3.16.0
 Faker==37.5.3
 Jinja2==3.1.6
+kombu==5.5.4
 MarkupSafe==3.0.2
+packaging==25.0
 pdfkit==1.0.0
+prompt_toolkit==3.0.52
+python-dateutil==2.9.0.post0
+redis==6.4.0
+six==1.17.0
 sqlparse==0.5.3
 tzdata==2025.2
+vine==5.1.0
+wcwidth==0.2.14
