--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -21,15 +21,19 @@
     "@mui/system": "^6.4.12",
     "@mui/utils": "^6.4.9",
     "@mui/x-date-pickers": "^8.5.3",
+    "@number-flow/react": "^0.5.10",
     "@reduxjs/toolkit": "^2.5.1",
     "@tanstack/react-query": "^5.66.0",
     "babel-loader": "^9.2.1",
     "dayjs": "^1.11.13",
     "framer-motion": "^12.19.1",
+    "i18next": "^25.6.0",
+    "i18next-browser-languagedetector": "^8.2.0",
     "js-cookie": "^3.0.5",
     "motion": "^12.4.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-i18next": "^16.1.4",
     "react-intersection-observer": "^9.15.1",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.5",
