--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,6 +34,8 @@ services:
     command: "celery --app=SubscriptionManagement beat -l INFO"
     volumes:
       - .:/app
+    env_file:
+      - .env
     depends_on:
       - redis
 
@@ -45,16 +47,18 @@ services:
       - .:/app
     depends_on:
       - redis
+    env_file:
+      - .env
 
   frontend:
     build:
-      context: .
-      target: Frontend
-    container_name: react-frontend
-    ports:
-      - "3000:3000"
+      context: ./Frontend
+   
     volumes:
       - ./Frontend:/app
-
+      - /app/node_modules
+    ports:
+      - "3000:3000"
     environment:
       - CHOKIDAR_USEPOLLING=true
+ 
