--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 amqp==5.3.1
 asgiref==3.8.1
 async-timeout==5.0.1
+babel==2.17.0
 bcrypt==4.3.0
 billiard==4.2.2
 celery==5.5.3
@@ -9,8 +10,12 @@ click-didyoumean==0.3.1
 click-plugins==1.1.1.2
 click-repl==0.3.0
 Django==5.2.1
+django-autoslug==1.9.9
+django-cities-light==3.10.2
 django-cors-headers==4.7.0
 django-filter==25.1
+django-model-utils==5.0.0
+django-money==3.5.4
 django-parler==2.3
 django-viewflow==2.2.12
 django_celery_results==2.6.0
@@ -22,11 +27,19 @@ MarkupSafe==3.0.2
 packaging==25.0
 pdfkit==1.0.0
 polib==1.2.0
+progressbar2==4.5.0
 prompt_toolkit==3.0.52
+py-moneyed==3.0
 python-dateutil==2.9.0.post0
+python-utils==3.9.1
+pytz==2025.2
 redis==6.4.0
 six==1.17.0
 sqlparse==0.5.3
+swapper==1.4.0
+tqdm==4.67.1
+typing_extensions==4.15.0
 tzdata==2025.2
+Unidecode==1.4.0
 vine==5.1.0
 wcwidth==0.2.14
